--- a/templates/main.html
+++ b/templates/main.html
@@ -11,7 +11,7 @@
     {% if messages %}
     <ul class="messages">
         {% for message in messages %}
-        <li></li>{{ message }}</li>
+        <li>{{ message }}</li>
         {% endfor %}
     </ul>
 
