--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,6 +5,11 @@
 <form action="{% url 'home' %}" method="GET">
     <input type="text" name="q" placeholder="Search Rooms...">
 </form>
-
+<p>Hello {{request.user}} </p>
+{% if request.user.is_authenticated %}
+<a href="{% url 'logout' %}">Logout</a>
+{% else %}
 <a href="{% url 'login' %}">Login</a>
+{% endif %}
+
 <hr>
