--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -5,7 +5,7 @@
 <style>
     .home-container {
         display: grid;
-        grid-template-columns: 1fr 3fr;
+        grid-template-columns: 1fr 3fr 1fr;
 
     }
 </style>
@@ -27,14 +27,11 @@
         </div>
 
         {% endfor %}
-
-
     </div>
 
     <div>
         <h5>{{room_count}} rooms available</h5>
         <a href="{% url 'create-room' %}">Create Room</a>
-    
         <div>
             {% for room in rooms %}
             <div>
@@ -50,6 +47,22 @@
             {% endfor %}
         </div>
 
+    </div>
+
+    <div>
+        <h3>Recent Activity</h3>
+        <hr>
+
+        {% for message in room_messages %}
+        <div>
+            <small>@{{message.user}} {{message.created|timesince}} </small>
+            <small>replied to "{{message.room}}"</small>
+            {% if request.user == message.user %}
+            <a href="{% url 'delete-message' message.id %}">Delete</a>
+            {% endif %}
+            <p> {{message}} </p>
+        </div>
+        {% endfor %}
     </div>
 
 
