--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -22,6 +22,9 @@
 
             {% for message in room_messages %}
             <div>
+                {% if request.user == message.user %}
+                <a href="{% url 'delete-message' message.id %}">Delete</a>
+                {% endif %}
                 <small>@{{message.user}} {{message.created|timesince}} ago</small>
                 <p>{{message.body}}</p>
                 <hr>
@@ -42,7 +45,13 @@
     
     <div>
         <h3>Participants</h3>
-        <hr>    
+        <hr>
+
+        {% for user in participants %}
+        <div>
+            <p>@{{user.username}}</p>
+        </div>
+        {% endfor %}
     </div>
 </div>
 
