--- a/templates/main.html
+++ b/templates/main.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'style/main.css' %}">
-    <title>StudyBud</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="{% static 'style/style.css' %}" />
+    <title>StudyBuddy - Find study partners around the world!</title>
 </head>
+
 <body>
+
     {% include 'navbar.html' %}
 
     {% if messages %}
@@ -16,11 +21,13 @@
         <li>{{ message }}</li>
         {% endfor %}
     </ul>
-
-{% endif %}
+    {% endif %}
 
     {% block content %}
 
     {% endblock %}
+
+    <script src="{% static 'js/script.js' %}"></script>
 </body>
+
 </html>
