--- a/base/templates/base/activity_component.html
+++ b/base/templates/base/activity_component.html
@@ -30,7 +30,7 @@
         <div class="activities__boxContent">
             <p>replied to post “<a href="{% url 'room' message.room.id %}">{{message.room}}</a>”</p>
             <div class="activities__boxRoomContent">
-                {{message}}
+                {{message.body}}
             </div>
         </div>
     </div>
